[gd_scene load_steps=7 format=3 uid="uid://cwhxbdhymkn8v"]

[ext_resource type="Script" path="res://App/Assign/Assign/connect.gd" id="1_3c7hr"]
[ext_resource type="FontFile" uid="uid://doosudslnw4jh" path="res://UI/Fonts/EFCircularTT-Bold.ttf" id="2_kqj5a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vbxr"]
bg_color = Color(0.635294, 1, 0.972549, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
shadow_color = Color(0, 0, 0, 0.403922)
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mblby"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vq10v"]
bg_color = Color(0.960784, 0.960784, 0.960784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c1nww"]
bg_color = Color(0.996996, 0.984534, 0.974008, 1)

[node name="Connect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.5
script = ExtResource("1_3c7hr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7vbxr")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HeaderLabel2" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_kqj5a")
theme_override_styles/normal = SubResource("StyleBoxFlat_mblby")
text = "SELECTED STUDENTS"

[node name="TotalSelectedLbl" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "(0)"

[node name="HSeparator4" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StudentList" type="ItemList" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1.92523e-06, 0, 0.66623, 1)
theme_override_fonts/font = ExtResource("2_kqj5a")
theme_override_styles/panel = SubResource("StyleBoxFlat_vq10v")
item_count = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AssignBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_font_sizes/font_size = 48
text = "Assign"
flat = true

[node name="TotalToAssignLbl" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "(0)"

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer3" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HeaderLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_kqj5a")
theme_override_styles/normal = SubResource("StyleBoxFlat_mblby")
text = "SELECTED CLASS"

[node name="HSeparator3" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClassLbl" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 0.3
theme_override_colors/font_color = Color(0, 0, 0.666667, 1)
theme_override_fonts/font = ExtResource("2_kqj5a")

[node name="StatusMsg" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/background_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
editable = false
shortcut_keys_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1

[node name="UI Elements" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI Elements"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_c1nww")
text = "sadffdasffds"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/AssignBtn" to="." method="_on_assign_btn_pressed"]
